@@ -1,8 +1,10 @@
 package com.jlh.jlhautopambackend.controllers;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.jlh.jlhautopambackend.modeles.Administrateur;
-import com.jlh.jlhautopambackend.repositories.AdministrateurRepository;
+import com.jlh.jlhautopambackend.config.JwtAuthenticationFilter;
+import com.jlh.jlhautopambackend.dto.AdministrateurRequest;
+import com.jlh.jlhautopambackend.dto.AdministrateurResponse;
+import com.jlh.jlhautopambackend.services.AdministrateurService;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
@@ -14,8 +16,8 @@ import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
@@ -35,29 +37,31 @@ class AdministrateurControllerTest {
     private ObjectMapper objectMapper;
 
     @MockitoBean
-    private AdministrateurRepository adminRepo;
+    private AdministrateurService service;
+
+    @MockitoBean
+    private com.jlh.jlhautopambackend.utils.JwtUtil jwtUtil;
+
+    @MockitoBean
+    private JwtAuthenticationFilter jwtAuthenticationFilter;
 
     @Test
     @DisplayName("GET /api/administrateurs ➔ 200, json list")
     void testGetAll() throws Exception {
-        Administrateur a1 = Administrateur.builder()
+        AdministrateurResponse r1 = AdministrateurResponse.builder()
                 .idAdmin(1)
                 .username("alice")
-                .motDePasse("password1")
-                .nom("Alice")
-                .prenom("A")
+                .nom("Alice").prenom("A")
                 .disponibilites(Collections.emptyList())
                 .build();
-        Administrateur a2 = Administrateur.builder()
+        AdministrateurResponse r2 = AdministrateurResponse.builder()
                 .idAdmin(2)
                 .username("bob")
-                .motDePasse("password2")
-                .nom("Bob")
-                .prenom("B")
+                .nom("Bob").prenom("B")
                 .disponibilites(Collections.emptyList())
                 .build();
 
-        Mockito.when(adminRepo.findAll()).thenReturn(Arrays.asList(a1, a2));
+        Mockito.when(service.findAll()).thenReturn(List.of(r1, r2));
 
         mvc.perform(get("/api/administrateurs").accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
@@ -69,15 +73,14 @@ class AdministrateurControllerTest {
     @Test
     @DisplayName("GET /api/administrateurs/{id} ➔ 200")
     void testGetByIdFound() throws Exception {
-        Administrateur a = Administrateur.builder()
+        AdministrateurResponse resp = AdministrateurResponse.builder()
                 .idAdmin(1)
                 .username("alice")
-                .motDePasse("password1")
-                .nom("Alice")
-                .prenom("A")
+                .nom("Alice").prenom("A")
                 .disponibilites(Collections.emptyList())
                 .build();
-        Mockito.when(adminRepo.findById(1)).thenReturn(Optional.of(a));
+
+        Mockito.when(service.findById(1)).thenReturn(Optional.of(resp));
 
         mvc.perform(get("/api/administrateurs/1").accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
@@ -87,7 +90,7 @@ class AdministrateurControllerTest {
     @Test
     @DisplayName("GET /api/administrateurs/{id} ➔ 404")
     void testGetByIdNotFound() throws Exception {
-        Mockito.when(adminRepo.findById(99)).thenReturn(Optional.empty());
+        Mockito.when(service.findById(99)).thenReturn(Optional.empty());
 
         mvc.perform(get("/api/administrateurs/99").accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound());
@@ -96,26 +99,24 @@ class AdministrateurControllerTest {
     @Test
     @DisplayName("POST /api/administrateurs ➔ 201, Location header")
     void testCreate() throws Exception {
-        Administrateur in = Administrateur.builder()
+        AdministrateurRequest req = AdministrateurRequest.builder()
                 .username("charlie")
                 .motDePasse("pwd3")
-                .nom("Charlie")
-                .prenom("C")
-                .disponibilites(Collections.emptyList())
+                .nom("Charlie").prenom("C")
                 .build();
-        Administrateur saved = Administrateur.builder()
+        AdministrateurResponse created = AdministrateurResponse.builder()
                 .idAdmin(3)
                 .username("charlie")
-                .motDePasse("pwd3")
-                .nom("Charlie")
-                .prenom("C")
+                .nom("Charlie").prenom("C")
                 .disponibilites(Collections.emptyList())
                 .build();
-        Mockito.when(adminRepo.save(Mockito.any())).thenReturn(saved);
+
+        Mockito.when(service.create(Mockito.any(AdministrateurRequest.class)))
+                .thenReturn(created);
 
         mvc.perform(post("/api/administrateurs")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(in)))
+                        .content(objectMapper.writeValueAsString(req)))
                 .andExpect(status().isCreated())
                 .andExpect(header().string("Location", "/api/administrateurs/3"))
                 .andExpect(jsonPath("$.idAdmin").value(3))
@@ -125,52 +126,39 @@ class AdministrateurControllerTest {
     @Test
     @DisplayName("PUT /api/administrateurs/{id} ➔ 200 when exists")
     void testUpdateFound() throws Exception {
-        Administrateur existing = Administrateur.builder()
-                .idAdmin(1)
-                .username("alice")
-                .motDePasse("pwd1")
-                .nom("Alice")
-                .prenom("A")
-                .disponibilites(Collections.emptyList())
-                .build();
-        Administrateur updates = Administrateur.builder()
+        AdministrateurRequest updates = AdministrateurRequest.builder()
                 .username("alice2")
                 .motDePasse("newpwd")
-                .nom("Alice")
-                .prenom("A2")
-                .disponibilites(Collections.emptyList())
+                .nom("Alice").prenom("A2")
                 .build();
-        Administrateur saved = Administrateur.builder()
+        AdministrateurResponse updated = AdministrateurResponse.builder()
                 .idAdmin(1)
                 .username("alice2")
-                .motDePasse("newpwd")
-                .nom("Alice")
-                .prenom("A2")
+                .nom("Alice").prenom("A2")
                 .disponibilites(Collections.emptyList())
                 .build();
 
-        Mockito.when(adminRepo.findById(1)).thenReturn(Optional.of(existing));
-        Mockito.when(adminRepo.save(Mockito.any())).thenReturn(saved);
+        Mockito.when(service.update(Mockito.eq(1), Mockito.any(AdministrateurRequest.class)))
+                .thenReturn(Optional.of(updated));
 
         mvc.perform(put("/api/administrateurs/1")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(updates)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.username").value("alice2"))
-                .andExpect(jsonPath("$.motDePasse").value("newpwd"));
+                .andExpect(jsonPath("$.username").value("alice2"));
     }
 
     @Test
     @DisplayName("PUT /api/administrateurs/{id} ➔ 404 when not found")
     void testUpdateNotFound() throws Exception {
-        Administrateur updates = Administrateur.builder()
+        AdministrateurRequest updates = AdministrateurRequest.builder()
                 .username("doesnt")
                 .motDePasse("none")
-                .nom("No")
-                .prenom("One")
-                .disponibilites(Collections.emptyList())
+                .nom("No").prenom("One")
                 .build();
-        Mockito.when(adminRepo.findById(42)).thenReturn(Optional.empty());
+
+        Mockito.when(service.update(Mockito.eq(42), Mockito.any(AdministrateurRequest.class)))
+                .thenReturn(Optional.empty());
 
         mvc.perform(put("/api/administrateurs/42")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -181,7 +169,7 @@ class AdministrateurControllerTest {
     @Test
     @DisplayName("DELETE /api/administrateurs/{id} ➔ 204 when exists")
     void testDeleteFound() throws Exception {
-        Mockito.when(adminRepo.existsById(1)).thenReturn(true);
+        Mockito.when(service.delete(1)).thenReturn(true);
 
         mvc.perform(delete("/api/administrateurs/1"))
                 .andExpect(status().isNoContent());
@@ -190,7 +178,7 @@ class AdministrateurControllerTest {
     @Test
     @DisplayName("DELETE /api/administrateurs/{id} ➔ 404 when not found")
     void testDeleteNotFound() throws Exception {
-        Mockito.when(adminRepo.existsById(99)).thenReturn(false);
+        Mockito.when(service.delete(99)).thenReturn(false);
 
         mvc.perform(delete("/api/administrateurs/99"))
                 .andExpect(status().isNotFound());
