@@ -1,29 +1,23 @@
 package com.jlh.jlhautopambackend.controllers;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.jlh.jlhautopambackend.modeles.Demande;
-import com.jlh.jlhautopambackend.modeles.DemandeService;
-import com.jlh.jlhautopambackend.modeles.DemandeServiceKey;
-import com.jlh.jlhautopambackend.modeles.Service;
-import com.jlh.jlhautopambackend.repositories.DemandeRepository;
-import com.jlh.jlhautopambackend.repositories.DemandeServiceRepository;
-import com.jlh.jlhautopambackend.repositories.ServiceRepository;
+import com.jlh.jlhautopambackend.dto.*;
+import com.jlh.jlhautopambackend.utils.JwtUtil;
+import com.jlh.jlhautopambackend.config.JwtAuthenticationFilter;
+import com.jlh.jlhautopambackend.services.DemandeServiceService;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.autoconfigure.web.servlet.*;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
-import java.util.Optional;
+import java.util.*;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(
@@ -33,183 +27,97 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @AutoConfigureMockMvc(addFilters = false)
 class DemandeServiceControllerTest {
 
-    @Autowired
-    private MockMvc mvc;
+    @Autowired MockMvc mvc;
+    @Autowired ObjectMapper objectMapper;
 
-    @Autowired
-    private ObjectMapper objectMapper;
+    @MockitoBean DemandeServiceService service;
+    @MockitoBean JwtUtil jwtUtil;
+    @MockitoBean JwtAuthenticationFilter jwtAuthenticationFilter;
 
-    @MockitoBean
-    private DemandeServiceRepository dsRepo;
-
-    @MockitoBean
-    private DemandeRepository demandeRepo;
-
-    @MockitoBean
-    private ServiceRepository serviceRepo;
-
-    @Test
-    @DisplayName("GET /api/demandes-services ➔ 200, json list")
+    @Test @DisplayName("GET /api/demandes-services ➔ 200, json list")
     void testGetAll() throws Exception {
-        DemandeService ds1 = DemandeService.builder()
-                .id(new DemandeServiceKey(1, 10))
-                .quantite(2)
-                .build();
-        DemandeService ds2 = DemandeService.builder()
-                .id(new DemandeServiceKey(2, 20))
-                .quantite(5)
-                .build();
-
-        Mockito.when(dsRepo.findAll()).thenReturn(Arrays.asList(ds1, ds2));
+        DemandeServiceKeyDto k1 = new DemandeServiceKeyDto(1,10);
+        DemandeServiceKeyDto k2 = new DemandeServiceKeyDto(2,20);
+        DemandeServiceResponse r1 = new DemandeServiceResponse(k1,2);
+        DemandeServiceResponse r2 = new DemandeServiceResponse(k2,5);
+        Mockito.when(service.findAll()).thenReturn(List.of(r1,r2));
 
         mvc.perform(get("/api/demandes-services").accept(MediaType.APPLICATION_JSON))
-                .andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$[0].id.idDemande").value(1))
                 .andExpect(jsonPath("$[1].id.idService").value(20));
     }
 
-    @Test
-    @DisplayName("GET /api/demandes-services/{demandeId}/{serviceId} ➔ 200")
-    void testGetByIdFound() throws Exception {
-        DemandeServiceKey key = new DemandeServiceKey(3, 30);
-        DemandeService ds = DemandeService.builder()
-                .id(key)
-                .quantite(7)
-                .build();
-        Mockito.when(dsRepo.findById(key)).thenReturn(Optional.of(ds));
+    @Test @DisplayName("GET by key ➔ 200")
+    void testGetByKeyFound() throws Exception {
+        DemandeServiceKeyDto key = new DemandeServiceKeyDto(3,30);
+        DemandeServiceResponse resp = new DemandeServiceResponse(key,7);
+        Mockito.when(service.findByKey(3,30)).thenReturn(Optional.of(resp));
 
         mvc.perform(get("/api/demandes-services/3/30").accept(MediaType.APPLICATION_JSON))
-                .andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.quantite").value(7));
     }
 
-    @Test
-    @DisplayName("GET /api/demandes-services/{demandeId}/{serviceId} ➔ 404")
-    void testGetByIdNotFound() throws Exception {
-        DemandeServiceKey key = new DemandeServiceKey(9, 90);
-        Mockito.when(dsRepo.findById(key)).thenReturn(Optional.empty());
-
-        mvc.perform(get("/api/demandes-services/9/90").accept(MediaType.APPLICATION_JSON))
-                .andDo(print())
+    @Test @DisplayName("GET by key ➔ 404")
+    void testGetByKeyNotFound() throws Exception {
+        Mockito.when(service.findByKey(9,90)).thenReturn(Optional.empty());
+        mvc.perform(get("/api/demandes-services/9/90"))
                 .andExpect(status().isNotFound());
     }
 
-    @Test
-    @DisplayName("POST /api/demandes-services ➔ 201 when both exist")
-    void testCreateSuccess() throws Exception {
-        int demandeId = 5, serviceId = 50;
-        DemandeService input = DemandeService.builder()
-                .demande(Demande.builder().idDemande(demandeId).build())
-                .service(Service.builder().idService(serviceId).build())
-                .quantite(3)
-                .build();
-
-        Demande demande = Demande.builder().idDemande(demandeId).build();
-        Service service = Service.builder().idService(serviceId).build();
-        DemandeService saved = DemandeService.builder()
-                .id(new DemandeServiceKey(demandeId, serviceId))
-                .demande(demande)
-                .service(service)
-                .quantite(3)
-                .build();
-
-        Mockito.when(demandeRepo.findById(demandeId)).thenReturn(Optional.of(demande));
-        Mockito.when(serviceRepo.findById(serviceId)).thenReturn(Optional.of(service));
-        Mockito.when(dsRepo.save(Mockito.any())).thenReturn(saved);
+    @Test @DisplayName("POST ➔ 201")
+    void testCreate() throws Exception {
+        DemandeServiceRequest req = new DemandeServiceRequest(5,50,3);
+        DemandeServiceKeyDto key = new DemandeServiceKeyDto(5,50);
+        DemandeServiceResponse created = new DemandeServiceResponse(key,3);
+        Mockito.when(service.create(Mockito.any())).thenReturn(created);
 
         mvc.perform(post("/api/demandes-services")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(input)))
-                .andDo(print())
+                        .content(objectMapper.writeValueAsString(req)))
                 .andExpect(status().isCreated())
-                .andExpect(header().string("Location", "/api/demandes-services/5/50"))
-                .andExpect(jsonPath("$.id.idDemande").value(5))
-                .andExpect(jsonPath("$.id.idService").value(50));
+                .andExpect(header().string("Location","/api/demandes-services/5/50"))
+                .andExpect(jsonPath("$.id.idDemande").value(5));
     }
 
-    @Test
-    @DisplayName("POST /api/demandes-services ➔ 400 when missing linked entity")
-    void testCreateBadRequest() throws Exception {
-        int demandeId = 6, serviceId = 60;
-        DemandeService input = DemandeService.builder()
-                .demande(Demande.builder().idDemande(demandeId).build())
-                .service(Service.builder().idService(serviceId).build())
-                .quantite(1)
-                .build();
-
-        Mockito.when(demandeRepo.findById(demandeId)).thenReturn(Optional.empty());
-
-        mvc.perform(post("/api/demandes-services")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(input)))
-                .andDo(print())
-                .andExpect(status().isBadRequest());
-    }
-
-    @Test
-    @DisplayName("PUT /api/demandes-services/{demandeId}/{serviceId} ➔ 200 when exists")
-    void testUpdateFound() throws Exception {
-        DemandeServiceKey key = new DemandeServiceKey(7, 70);
-        DemandeService existing = DemandeService.builder()
-                .id(key)
-                .quantite(4)
-                .build();
-        DemandeService dto = DemandeService.builder()
-                .quantite(9)
-                .build();
-        DemandeService updated = DemandeService.builder()
-                .id(key)
-                .quantite(9)
-                .build();
-
-        Mockito.when(dsRepo.findById(key)).thenReturn(Optional.of(existing));
-        Mockito.when(dsRepo.save(Mockito.any())).thenReturn(updated);
+    @Test @DisplayName("PUT ➔ 200")
+    void testUpdate() throws Exception {
+        DemandeServiceRequest req = new DemandeServiceRequest(null,null,9);
+        DemandeServiceKeyDto key = new DemandeServiceKeyDto(7,70);
+        DemandeServiceResponse updated = new DemandeServiceResponse(key,9);
+        Mockito.when(service.update(Mockito.eq(7),Mockito.eq(70),Mockito.any()))
+                .thenReturn(Optional.of(updated));
 
         mvc.perform(put("/api/demandes-services/7/70")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(dto)))
-                .andDo(print())
+                        .content(objectMapper.writeValueAsString(req)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.quantite").value(9));
     }
 
-    @Test
-    @DisplayName("PUT /api/demandes-services/{demandeId}/{serviceId} ➔ 404 when not found")
+    @Test @DisplayName("PUT ➔ 404")
     void testUpdateNotFound() throws Exception {
-        DemandeServiceKey key = new DemandeServiceKey(8, 80);
-        DemandeService dto = DemandeService.builder()
-                .quantite(2)
-                .build();
-        Mockito.when(dsRepo.findById(key)).thenReturn(Optional.empty());
+        Mockito.when(service.update(Mockito.eq(8),Mockito.eq(80),Mockito.any()))
+                .thenReturn(Optional.empty());
 
         mvc.perform(put("/api/demandes-services/8/80")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(dto)))
-                .andDo(print())
+                        .content("{}"))
                 .andExpect(status().isNotFound());
     }
 
-    @Test
-    @DisplayName("DELETE /api/demandes-services/{demandeId}/{serviceId} ➔ 204 when exists")
+    @Test @DisplayName("DELETE ➔ 204")
     void testDeleteFound() throws Exception {
-        DemandeServiceKey key = new DemandeServiceKey(11, 110);
-        Mockito.when(dsRepo.existsById(key)).thenReturn(true);
-
+        Mockito.when(service.delete(11,110)).thenReturn(true);
         mvc.perform(delete("/api/demandes-services/11/110"))
-                .andDo(print())
                 .andExpect(status().isNoContent());
     }
 
-    @Test
-    @DisplayName("DELETE /api/demandes-services/{demandeId}/{serviceId} ➔ 404 when not found")
+    @Test @DisplayName("DELETE ➔ 404")
     void testDeleteNotFound() throws Exception {
-        DemandeServiceKey key = new DemandeServiceKey(12, 120);
-        Mockito.when(dsRepo.existsById(key)).thenReturn(false);
-
+        Mockito.when(service.delete(12,120)).thenReturn(false);
         mvc.perform(delete("/api/demandes-services/12/120"))
-                .andDo(print())
                 .andExpect(status().isNotFound());
     }
 }
